--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ langchain_openai==0.3.6
 python-dotenv==1.0.1
 langchain_chroma==0.2.2
 matplotlib==3.10.0
+scikit-learn==1.6.1
+spacy==3.7.4
+spacy-transformers==1.3.4
